--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,14 @@
     <meta name="keywords" content="Resume, CV, Deanna Sale, Software Developer">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
     <title>Deanna Carina Sale | Contact</title>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_kO5FRoM19X5QiqUPbOqXI");
+    })();
+    </script>
 </head>
 <body>
     <header>
@@ -59,9 +67,10 @@
                 <h5 class="uppercase text-center">Please use the form below.</h5>
 
                 <div class="center-form">
-                    <form class="contact-form">
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required/>
+                    <form class="contact-form" onsubmit="return sendMail(this);" method="POST">
+                        <input type="text" name="name" id="name" class="form-control" placeholder="Name" required/>
                         <input type="text" name="email" id="email" class="form-control" placeholder="Email Address" required/>
+                        <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required/>
                         <textarea rows="10" name="message" id="message" class="form-control" placeholder="Your message" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
@@ -124,5 +133,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/email.js"></script>
 </body>
 </html>
